<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

        <variable
            name="shoeDetail"
            type="com.udacity.shoestore.MainViewModel.ShoeDetail" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/new_shoe_detail"
            android:textSize="24sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="16dp">

                <EditText
                    android:id="@+id/edtShoeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shoe_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@={shoeDetail.shoeName}" />

                <EditText
                    android:id="@+id/edtCompanyShoe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/company"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@={shoeDetail.company}" />

                <EditText
                    android:id="@+id/edtShoeSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/size"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:text="@={shoeDetail.shoeSize}" />

                <EditText
                    android:id="@+id/edtDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/description"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@={shoeDetail.shoeDesc}" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                style="?android:attr/buttonBarNegativeButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{listener::onClick}"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnSave"
                style="?android:attr/buttonBarPositiveButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="@{shoeDetail.isVerifyDetail}"
                android:onClick="@{listener::onClick}"
                android:text="@string/save" />

        </LinearLayout>
    </LinearLayout>
</layout>