<?xml version="1.0" encoding="utf-8"?>
<!--  This layout only text with order from top to bottom so it will be Linearlayout   -->
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="listener"
            type="android.view.View.OnClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_screen" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_button_below_to_go_list_shoe_screen" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnMoveNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_next"
            android:onClick="@{listener::onClick}"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
</layout>